# EdgeStorage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: basic_benchmark.c
docs/: architecture.md  benchmark-results.md  mvp.md  roadmap.md
examples/: basic_example.c
include/edgestorage/: edgestorage.h
src/api/: edgestorage.c
src/compression/: compression.c
src/core/: runtime.c  stream_registry.c
src/internal/: compression.h  runtime.h  segment_format.h  storage_reader.h  storage_writer.h  stream_registry.h
src/storage/: segment_format.c  storage_reader.c  storage_writer.c
testdata/stream_1/: segment_000001.seg
tests/: compression_delta_test.c  read_query_test.c  segment_header_test.c  smoke_test.c  storage_flow_test.c
